--- a/miniprogram/pages/marks/marks.wxml
+++ b/miniprogram/pages/marks/marks.wxml
@@ -2,6 +2,11 @@
 <template is="tabBar" data="{{tabBar:bindData.tabBar}}"/> -->
 
 <view class='container {{isIphoneX? "iphoneX": ""}}'>
+  <view class='add-wrap' wx:if="{{!adError || !adClose}}">
+    <view class='ad'>
+      <ad unit-id="adunit-32d6aab46df348fd" binderror="adError" bindclose="adClose"></ad>
+    </view>
+  </view>
   <view class='wrap' wx:if="{{listLen > 0}}" style="margin-bottom: 20rpx;">
     <view 
     class='single-note-wrap'  
@@ -12,11 +17,9 @@
       <view 
       class='single-note-cover {{(addAnimation || moveIdx!=index)? "ainimation": ""}}'
       bindtap='goToDetail'
-      bindlongpress='showTagNMark' 
+      bindlongpress='addTagNMark' 
       data-id="{{item._id}}" 
       data-index="{{index}}"
-      data-tagid="{{item.tagId}}"
-      data-mark="{{item.mark}}"
       data-notetitle="{{item.title}}"
       bindtouchstart='itemTouchStart'
       bindtouchmove='{{preventMove? "preventScroll":"itemTouchMove"}}'
@@ -34,9 +37,7 @@
             <view class='tag' wx:if="{{item.tagName}}">{{item.tagName}}</view>
             <view class=''>{{item.modified_at || item.created_at}}</view>
           </view>
-          <view class='right' wx:if="{{item.mark == 1}}">
-            <image src='/images/mark.png' class='icon'></image>
-          </view>
+          <!-- <view class='right' wx:if="{{item.mark == 1}}">收藏</view> -->
         </view> 
         <view class='single-note-delete' catchtap='deleteNote' data-id="{{item._id}}" data-index="{{index}}">删除</view>
       </view>
@@ -45,13 +46,16 @@
     <!-- <view class='end-line'>---我是有底线的---</view> -->
   </view>
   <view wx:elif="{{listLen <= 0 && loaded}}" class='no-note'>
-    <button class='create-new-btn'  bindtap='createNew'>新建一个便签</button>
+    <!-- <button class='create-new-btn'  bindtap='createNew'>新建一个便签</button> -->
+    <view class='create-new-btn' style="background: none; color: #999;">
+    <text style='text-align: center; width: 100%; display: inline-block'>当前没有收藏 \n 长按便签添加到收藏</text>
+    
+    </view>
   </view>
 <view class='mask' wx:if="{{showMask}}" bindtap='hideMask'>
   <view class='content'>
-    <view class='content-item' catchtap='goMark' wx:if="{{isMarked}}">取消收藏</view>
-    <view class='content-item' catchtap='goMark' wx:else>收藏</view>
-    <view class='content-item' catchtap="goAddTag">移到文件夹</view>
+    <view class='content-item' catchtap='goUnMark'>取消收藏</view>
+     <view class='content-item' catchtap="goAddTag">移到文件夹</view>
     <view class='content-item share-wrap'>
     转发
     <button open-type='share' class="share-btn"></button>
