--- a/miniprogram/pages/marks/marks.wxss
+++ b/miniprogram/pages/marks/marks.wxss
@@ -55,7 +55,6 @@ page {
   height: 100%;
   width: 100%;
   z-index: 10000;
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,12 +79,23 @@ page {
 .mask .content-item:last-child {
   border-bottom: none;
 }
-
 .share-wrap	.share-btn {
-			position: absolute;
-			height: 100%;
-			width: 100%;
-			opacity: 0;
-			z-index: 99;
-			top: 0;
-		}
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  z-index: 99;
+  top: 0;
+}
+
+.add-wrap {
+  background: #fff;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.ad {
+  border-radius: 8rpx;
+  margin-top: 20rpx;
+  height: 140rpx;
+}
